# knowledge-worker

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  SPEC.md  V1_DESIGN.md  V1_PLAN.md  blog_draft_haiku_sonnet_opus_brain.md  inspiration.md  knowledge_worker_principles.md  pyproject.toml  requirements.txt
.claude/skills/ingest-notes/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: BENCHMARKS.md  COMPETITIVE_ANALYSIS.md  CONTEXT_PACKS.md  DEEP_DIVE_INTERACTION_MODEL.md  MEM0_COMPARISON.md  ROADMAP.md  STORAGE_DECISION.md
examples/: demo_analytics.json  demo_discovery.candidates.json  demo_discovery.json  demo_graph.html  demo_graph.json  demo_graph.jsonld  demo_graph.ttl
mygraph/: __init__.py  anthropic_client.py  audit.py  check.py  deep_dive.py  discover.py  eval_log.py  export_context.py  extractor.py  extractor_openai.py  ingest.py  memory_audit.py  merge.py  mygraph.py  mygraph.ttl  owl_io.py  requirements.txt  review.py  test_anthropic_client.py  validator.py  viz.py
ollama_proxy/: README.md  eval_compare.py  extractor_adapter.py  proxy.py  requirements.txt  server.py  tailscale.md
tests/: __init__.py  test_anthropic_client.py  test_benchmarks.py  test_cli_regression.py  test_cli_smoke.py  test_deep_dive.py  test_discover.py  test_extractor_provenance.py  test_ollama_proxy.py
