[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-worker"
version = "0.7.0"
description = "Provenance-backed personal knowledge graph for local AI workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Rahul Rangarao", email = "rahulmranga@gmail.com" }]
keywords = [
    "knowledge-graph",
    "ai-memory",
    "llm-memory",
    "memory",
    "context-management",
    "local-first",
    "provenance",
    "personal-knowledge-management",
    "rag",
    "mcp",
    "ai",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup :: Markdown",
]

# Core graph (seed/summary/query/viz/export_context) — stdlib only, no deps.
# Install optional extras for LLM-backed ingest and Turtle export.
dependencies = []

[project.optional-dependencies]
rdf = ["rdflib>=7.0.0"]
anthropic = ["anthropic>=0.39.0", "rdflib>=7.0.0"]
openai = ["openai>=1.68.0", "rdflib>=7.0.0"]
llm = ["anthropic>=0.39.0", "openai>=1.68.0", "rdflib>=7.0.0"]
ollama = ["httpx>=0.27.0", "rdflib>=7.0.0"]
proxy = ["fastapi>=0.110.0", "httpx>=0.27.0", "mcp[cli]>=1.0.0", "uvicorn[standard]>=0.27.0"]
all = ["anthropic>=0.39.0", "openai>=1.68.0", "httpx>=0.27.0", "rdflib>=7.0.0"]

[project.scripts]
mykg = "mygraph.mygraph:cli"
mygraph = "mygraph.mygraph:cli"

[project.urls]
Homepage = "https://github.com/rahulmranga/knowledge-worker"
Repository = "https://github.com/rahulmranga/knowledge-worker"
Issues = "https://github.com/rahulmranga/knowledge-worker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mygraph*", "ollama_proxy*"]
